[package]
name = "anchor-escrow-q424"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow_q424"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-lang/spl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl ="0.30.1"
